--- a/notebooks/click_bank_analytics.Rmd
+++ b/notebooks/click_bank_analytics.Rmd
@@ -10,76 +10,12 @@ knitr::opts_chunk$set(echo = F, warning = F, message = F)
 ```
 
 ```{r}
-library(glue)
-library(XML)
-library(methods)
-library(jsonlite)
-library(DT)
-library(ggthemes)
-library(devtools)
-library(ggrepel)
-library(tidyverse)
-library(ggbiplot)
+source("../apps/api.R")
 ```
 
 
-
 ```{r}
-url <-
-  "https://accounts.clickbank.com/feeds/marketplace_feed_v2.xml.zip"
-target.dir <- tempdir()
-target.file <- "{target.dir}/clickbank.zip" %>% glue()
-xml.file.name <- "{target.dir}/marketplace_feed_v2.xml" %>% glue()
-
-if (!file.exists(target.file)) {
-  download.file(url,
-                target.file)
-  unzip(target.file, exdir = target.dir)
-}
-
-numeric.cols <-  c(
-  "Gravity",
-  "PercentPerSale",
-  "PercentPerRebill",
-  "AverageEarningsPerSale",
-  "InitialEarningsPerSale",
-  "TotalRebillAmt",
-  "Referred",
-  "Commission"
-)
-data <-
-  xmlToDataFrame(nodes = getNodeSet(
-    xmlParse(file = xml.file.name, encoding = "ISO-8859-1"),
-    "//Site"
-  )) %>%
-  mutate(
-    PopularityRank = as.integer(as.character(PopularityRank)),
-    PopularityRank_bin = cut(
-      PopularityRank,
-      breaks = quantile(PopularityRank, probs =
-                          seq(0, 1, 0.2)),
-      include.lowest = T
-    ),
-    ActivateDate = as.Date(ActivateDate),
-    HasRecurringProducts = if_else(HasRecurringProducts == 'true', T, F)
-  ) %>%
-  mutate_at(numeric.cols, as.double) %>% #
-  mutate_at(numeric.cols, .funs = list(bin =  ~ cut(
-    ., breaks = unique(quantile(
-      ., probs = seq(0, 1, by = 0.20), na.rm = T
-    ),), include.lowest = T
-  ))) %>%
-  group_by(Id) %>%
-  arrange(Id, PopularityRank) %>%
-  slice(1) %>%
-  ungroup() 
-
-
-data.pca <- data %>%
-  dplyr::select(numeric.cols) %>%
-  prcomp(center = T, scale. = T)
-
-data <- data %>% bind_cols(data.pca$x %>% as_tibble())
+data <- load.data()
 ```
 
 
@@ -212,7 +148,7 @@ data %>%
   filter(AverageEarningsPerSale > 100 & Gravity > 30) %>% 
   ggplot(aes(x=Gravity, y=AverageEarningsPerSale)) +
   scale_color_continuous_tableau()+
-  geom_bin2d(bins=5)
+  geom_bin2d(bins=2)
 ```
 ```{r}
 
